<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SingUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"

        android:layout_marginStart="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Gribanov"
            android:textColor="@color/recycler"
            android:textSize="45dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Lavka"
            android:textColor="@color/black"
            android:textSize="45dp">

        </TextView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/cardview"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Third.boxTextField"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:hint="@string/name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Third.boxTextField"
                android:layout_width="300dp"
                android:layout_height="45dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eMail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:padding="5dp"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Third.boxTextField"
                android:layout_width="300dp"
                android:layout_height="45dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pass"
                    android:padding="5dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Third.boxTextField"
                android:layout_width="300dp"
                android:layout_height="45dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/confirm"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup1"
                style="@style/buttons"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                style="@style/buttons"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="@android:color/darker_gray"
                android:textSize="12dp"
                app:strokeColor="@android:color/darker_gray" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>






